# inbar

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTINUITY.md  CONTRIBUTING.md  DATA_LICENSES.md  HANDOFF.md  IP_NOTICE.md  PREREGISTRATION.md  README.md  REVIEWER.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  memory-integrity.yml
claims/: registry.jsonl
docs/: ARCHITECTURE.md  CLAIM_BOUNDARIES.md  FRONTIER_RESEARCH_2026.md  IDENTITY.md  MATHEMATICS.md  PUBLICATION_GATES.md  ROADMAP.md
docs/integrations/: AWEB.md
docs/research/: INBAR_FRONTIER_AUDIT_2026-07-19.md  INBAR_HIL_FALSIFIER_PACKET_2026-07-19.md  ITER001_CONTROL_PRODUCER_V1.md  ITER001_SHORTCUT_AUTHORITY_V2.md  ITER001_SHORTCUT_V2_IMPLEMENTATION_CHECKPOINT.md  ITER001_SOURCE_ROLE_AUDIT.md  ITER001_TERMINAL_AUTHORITY_V1.md
experiments/iter000_nasa_adapt_corpus_readiness/: AMENDMENT_001.md  HYPOTHESIS.md  VERIFICATION_AMENDMENT_001.md  VERIFICATION_AMENDMENT_002.md
experiments/iter001_physical_causal_evidence_acquisition/: ADJUDICATION_FREEZE_COMPENSATOR_FAMILY.md  ADJUDICATION_FREEZE_MASKING.md  ADJUDICATION_FREEZE_MASKING_V2.md  ADJUDICATION_FREEZE_MASKING_V3.md  ADJUDICATION_FREEZE_SUSCEPTIBILITY.md  AMENDMENT_001.md  AMENDMENT_002.md  AMENDMENT_003.md  AMENDMENT_004.md  AMENDMENT_005.md  AMENDMENT_006.md  AMENDMENT_006_APPROVAL_DEFECT.md  AMENDMENT_006_EVIDENCE_DEFECT.md  AMENDMENT_007.md  HYPOTHESIS.md  RESULT_COMPENSATOR_FAMILY.md  RESULT_MASKING.md  RESULT_SUSCEPTIBILITY.md  RESULT_SUSCEPTIBILITY_CONFIRMATORY.md
harness/: runner.py
memory/: README.md  research_engine_extraction.jsonl
mission/: contract.json  loop.json  name.json
protocol/acquisition/: iter001_contract.json
protocol/amendments/: iter000_001.json  iter000_verification_001.json  iter000_verification_002.json  iter001_001.json  iter001_002.json  iter001_003.json  iter001_004.json  iter001_005.json  iter001_006.json
protocol/approvals/: iter001_001_owner_approval.json  iter001_002_owner_approval.json  iter001_003_owner_approval.json  iter001_004_owner_approval.json  iter001_005_owner_approval.json  iter001_006_owner_approval.json
protocol/attempt_authorities/: iter000_001.json
protocol/baselines/: v1.json
protocol/census/: frame_registry.json
protocol/datasets/: nasa_adapt_v1.json
protocol/gate_controls/: credibility_v1.json  v1.json
protocol/schemas/: acquisition_admission_report.schema.json  acquisition_candidate_registry.schema.json  acquisition_contract.schema.json  acquisition_gate_result.schema.json  acquisition_input_entry.schema.json  acquisition_input_manifest.schema.json  acquisition_split_locks.schema.json  actor_trust_registry.schema.json  adapt_coverage.schema.json  adapt_dataset_lock.schema.json  adapt_ingestion_receipt.schema.json  admission_control_result.schema.json  admission_control_suite_receipt.schema.json  admission_invalidity_record.schema.json  admission_terminal_record.schema.json  admission_verifier_certificate.schema.json  approval_receipt.schema.json  artifact_binding.schema.json  assurance_certificate.schema.json  bound_review.schema.json  candidate_incident_root.schema.json  causal_lab_branch.schema.json  causal_lab_branch_set.schema.json  causal_lab_compute_lease.schema.json  causal_lab_episode_report.schema.json  causal_lab_mechanism_class.schema.json  causal_lab_mechanism_ontology.schema.json  causal_lab_sealed_mechanism.schema.json  causal_lab_snapshot.schema.json  census_candidate_screening.schema.json  (+126 more)
requirements/: build-constraints.txt
tests/: __init__.py  acquisition_helpers.py  helpers.py
(+335 files in other folders)
