[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "fieldtrue"
version = "0.1.0"
description = "Inbar physical causal evidence and independently verified intervention research."
readme = "README.md"
requires-python = ">=3.11,<3.15"
authors = [{ name = "Daniel Wahnich" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = [
  "certifi>=2026.6.17,<2027",
  "networkx>=3.4,<4",
  "numpy>=2.0,<3",
  "packaging>=26.2,<27",
  "pydantic>=2.10,<3",
  "pynacl>=1.5,<2",
  "scikit-learn>=1.6,<2",
  "scipy>=1.14,<2",
]

[project.optional-dependencies]
data = ["pyarrow>=19,<24"]
gpu = ["torch>=2.7,<3"]

[dependency-groups]
dev = [
  "hypothesis>=6.120,<7",
  "mypy>=1.14,<2",
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]
release = [
  "build>=1.3,<2",
  "check-wheel-contents>=0.6,<1",
  "twine>=6.2,<7",
]
security = ["pip-audit>=2.9,<3"]

[project.scripts]
fieldtrue = "fieldtrue.cli:main"
inbar = "fieldtrue.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fieldtrue"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/fieldtrue",
  "/IP_NOTICE.md",
  "/README.md",
  "/pyproject.toml",
  "/requirements/build-constraints.txt",
]
exclude = ["/.gitignore"]

[tool.uv]
link-mode = "copy"

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config --runxfail"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["fieldtrue"]

[tool.coverage.report]
fail_under = 90.01
precision = 2
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "PT", "RUF", "S", "SIM"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["fieldtrue"]
